fix link visibility

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,3 +5,7 @@ h1, p {
 .resources {
   text-align: left
 }
+
+a {
+  color: gray
+}
